# ome-types-widget

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ome_types/: __init__.py
src/ome_types_widget/: napari.yaml  widget.py
tests/: test_widget.py
tests/data/: seq0000xy01c1.ome.xml
