# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "ome-types-widget"
description = "A Qt widget that can show OME metadata using ome-types"
keywords = ["ome", "ome-model", "microscopy", "metadata", "widget"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: napari",
]
dynamic = ["version"]
dependencies = [
  "qtpy >=2.4.0",
  "ome-types",
]

[project.urls]
Source = "https://github.com/imaging-formats/ome-types-widget"
Tracker = "https://github.com/imaging-formats/ome-types-widget/issues"

[project.entry-points."napari.manifest"]
ome-types-widget = "ome_types_widget:napari.yaml"

# https://peps.python.org/pep-0735/
[dependency-groups]
test = [
  "pytest-qt >=4.4.0",
  "napari[pyqt6]>=0.5.0",
  "pytest-cov >=4.0.0",
  "pytest >=7.0.0",
]
dev = [
  { include-group = "test" },
  "ruff>=0.11.5",
  "prek>=0.2.19",
  "pyright>=1.1.408",
]

[tool.uv.sources]
ome-types = { workspace = true }

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]
exclude = ["typings"]
fix = true
unsafe-fixes = true

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "E731", # Do not assign a lambda expression, use a def
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
enableExperimentalFeatures = true
verboseOutput = true
venv = ".venv"
reportMissingModuleSource = "none"

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:Failing to pass a value to the 'type_params' parameter",
    "ignore:Failed to retrieve OME XML:RuntimeWarning",
]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["ome_types"]

[tool.check-manifest]
ignore = [".pre-commit-config.yaml", ".ruff_cache/**/*", "tests/**/*"]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)nd2?.*", "(?i)ome", "AIMD", "ot", "napari"]
